The flickr integration begins....

--- a/examples/flickr/views/index.haml.html
+++ b/examples/flickr/views/index.haml.html
@@ -11,4 +11,5 @@
     %input{ type: 'submit', value: 'Send' }
   #scroller
     %ul
-      %li
+      :foreach{ array : photos, value : "item" }
+        %li= item.id
