--- a/examples/flickr/views/layout.haml.html
+++ b/examples/flickr/views/layout.haml.html
@@ -1,9 +1,12 @@
 %html
   %head
-    %title Chat
+    %title Flickr PhotoStream Viewer.
     %script{ src: '/public/javascripts/jquery.js' }
-    %script{ src: '/public/javascripts/jcarousellite_1.0.1.pack.js' }
     %script{ src: '/public/javascripts/jquery.easing.1.1.js' }
+    %script{ src: '/public/javascripts/jquery.jcarousellite.pauseOnHover.js' }
+    %script{ src: '/public/javascripts/thickbox.js' }
     %script{ src: '/public/javascripts/app.js' }
+    %link{ rel: 'stylesheet', href: '/public/stylesheets/thickbox.css' }
+    %link{ rel: 'stylesheet', href: '/public/stylesheets/app.css' }
   %body
     #wrapper= body
