--- a/examples/flickr/views/layout.haml.html
+++ b/examples/flickr/views/layout.haml.html
@@ -7,6 +7,6 @@
     %script{ src: '/public/javascripts/thickbox.js' }
     %script{ src: '/public/javascripts/app.js' }
     %link{ rel: 'stylesheet', href: '/public/stylesheets/thickbox.css' }
-    %link{ rel: 'stylesheet', href: '/public/stylesheets/app.css' }
+    %link{ rel: 'stylesheet', href: '/style.css' }
   %body
     #wrapper= body
